scripts/02_ensemble/slurm-25975.out
Loading parflow-ml/latest
  Loading requirement: openmpi/gcc/4.1.0 parflow/3.9.0 gdal/3.2.1
  File "ensemble_agg.py", line 211
    print('\n', 'transformer', trans_test(df_2_scale).min())
    ^
SyntaxError: invalid syntax
